# haskell-search

./: .gitignore  LICENSE  README.md  index.html  stack.yaml  webse.cabal
data/: Init.sql  StopWords
data/Static/: styles.css
exe/: Main.hs
src/: DocViews.hs  Documents.hs  Layout.hs  Main.hs
src/Database/: Documents.hs  DocumentsDB.hs  Processing.hs
src/Pages/: AdminPages.hs  Auth.hs  DocumentPage.hs  DocumentsIndex.hs  UrlUtils.hs
src/Presentation/: AlphabeticalIndex.hs  DocEditor.hs  DocViews.hs  Layout.hs  Login.hs  Toolbar.hs
src/Search/: Index.hs  IndexBuilding.hs  InvertedIndex.hs  Porter.hs  TermIndex.hs
src/Service/: Config.hs
src/TextUtils/: Editing.hs  FileUtils.hs  ListUtils.hs  Processing.hs  StateUtils.hs
static/: styles.css
tests/: DocViewsSpec.hs  DocumentsSpec.hs  LayoutSpec.hs
tests/Database/: DocumentsDBSpec.hs  DocumentsSpec.hs  ProcessingSpec.hs
tests/Pages/: AuthSpec.hs  UrlUtilsSpec.hs
tests/Presentation/: AlphabeticalIndexSpec.hs  DocEditorSpec.hs  DocViewsSpec.hs  LayoutSpec.hs  LoginSpec.hs  ToolbarSpec.hs
tests/Search/: IndexBuildingSpec.hs  IndexSpec.hs  InvertedIndexSpec.hs  PorterSpec.hs  TermIndexSpec.hs
tests/Service/: ConfigSpec.hs
tests/TextUtils/: EditingSpec.hs  FileUtilsSpec.hs  ListUtilsSpec.hs  ProcessingSpec.hs  StateUtilsSpec.hs
