cabal-version:       2.2
name:                webse
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Vlad Poletaev
maintainer:          poletaev.vladislav@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  ChangeLog.md

data-dir:            static
data-files:          styles.css,
                     Images/Background.svg,
                     Images/Logo.svg


common shared-properties
  default-language:    Haskell2010
  build-depends:       base == 4.*
  ghc-options:         -Wall


library webse-lib
  import:              shared-properties
  build-depends:       base >= 4.11,
                       happstack-server >= 7.4.0,
                       blaze-markup >= 0.8.0.0,
                       blaze-html >= 0.9.0.0
  exposed-modules:     Layout,
                       Documents
  hs-source-dirs:      src


executable webse
  import:              shared-properties
  main-is:             Main.hs
  other-modules:       Paths_webse
  build-depends:       happstack-server >= 7.4.0,
                       webse-lib
  hs-source-dirs:      exe


test-suite spec
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests
  build-depends:       hspec == 2.*,
                       blaze-html >= 0.9.0.0,
                       webse-lib
  other-modules:       LayoutSpec,
                       DocumentsSpec
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
