cabal-version:       2.2
name:                webse
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Vlad Poletaev
maintainer:          poletaev.vladislav@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  ChangeLog.md

data-dir:            data
data-files:          Static/styles.css,
                     Static/Images/Background.svg,
                     Static/Images/Logo.svg,
                     Init.sql,
                     StopWords


common shared-properties
  default-language:    Haskell2010
  build-depends:       base == 4.*
  ghc-options:         -Wall


library webse-lib
  import:              shared-properties
  build-depends:       base >= 4.11,
                       happstack-server >= 7.4.0,
                       blaze-markup >= 0.8.0.0,
                       blaze-html >= 0.9.0.0,
                       sqlite-simple >= 0.4.0.0,
                       text >= 1.2.0.0,
                       split >= 0.2.0.0,
                       directory >= 1.3.0.0,
                       data-stringmap >= 1.0.0.0,
                       containers >= 0.6.0.0,
                       mtl >= 2.2.0,
                       binary >= 0.8.0.0,
                       bytestring >= 0.10.0.0,
                       cipher-aes >= 0.2.11,
                       time >= 1.9.0
  exposed-modules:     Presentation.Layout,
                       Presentation.DocViews,
                       Presentation.AlphabeticalIndex,
                       Search.Porter,
                       Database.Documents,
                       Database.DocumentsDB,
                       TextUtils.Processing,
                       TextUtils.StateUtils,
                       TextUtils.FileUtils,
                       Pages.DocumentPage,
                       Pages.DocumentsIndex,
                       Pages.UrlUtils,
                       Search.TermIndex,
                       Search.InvertedIndex,
                       Search.IndexBuilding,
                       Search.Index,
                       Pages.Auth
  other-modules:       Paths_webse
  hs-source-dirs:      src


executable webse
  import:              shared-properties
  main-is:             Main.hs
  other-modules:       Paths_webse
  build-depends:       happstack-server >= 7.4.0,
                       webse-lib
  hs-source-dirs:      exe


test-suite spec
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests
  build-depends:       hspec == 2.*,
                       blaze-html >= 0.9.0.0,
                       webse-lib,
                       temporary-rc >= 1.2.0.0,
                       directory >= 1.3.0.0,
                       sqlite-simple >= 0.4.0.0,
                       mtl >= 2.2.0,
                       binary >= 0.8.0.0,
                       bytestring >= 0.10.0.0,
                       containers >= 0.6.0.0,
                       cipher-aes >= 0.2.11,
                       time >= 1.9.0
  other-modules:       Presentation.LayoutSpec,
                       Presentation.DocViewsSpec,
                       Presentation.AlphabeticalIndexSpec,
                       Search.PorterSpec,
                       Database.DocumentsSpec,
                       Database.DocumentsDBSpec,
                       TextUtils.ProcessingSpec,
                       TextUtils.StateUtilsSpec,
                       TextUtils.FileUtilsSpec,
                       Pages.UrlUtilsSpec,
                       Search.TermIndexSpec,
                       Search.InvertedIndexSpec,
                       Search.IndexBuildingSpec,
                       Search.IndexSpec,
                       Pages.AuthSpec
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
